improve npm run export command, add github pages tasks

--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "github-pages": "node github-pages.js",
+    "export": "npm run build && next export && npm run github-pages"
   },
   "dependencies": {
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "del": "^6.0.0"
   }
 }
